Artık belirli zaman aralıklarında rastgele yerde ucak oluşuyor.

--- a/SavasOyunu.Library/SavasOyunu.Library.csproj
+++ b/SavasOyunu.Library/SavasOyunu.Library.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Abstract\Cisim.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Concrete\Ucak.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Concrete\Mermi.cs">
       <SubType>Component</SubType>
     </Compile>
